# hs-pos

./: .gitignore  .gitmodules  .hintrc  CHANGELOG.md  Diagram.puml  ERD.puml  LICENSE  Makefile  README.md  SCHEMA:main.uml  default.nix  hs-pos.cabal  package.json  shell.nix  store.db-journal  store.db.old
app/: Database.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
public/: dash.html  index.html  main.3c20c754.css  main.f9895baf.js  reac.html
src/Database/HsPOS/: #Sqlite.hs#  .#Sqlite.hs  Auth.hs  Http.hs  Math.hs  Postgres.hs  Session.hs  Sqlite.hs  Types.hs  Util.hs
src/Database/HsPOS/Internal/: Auth.hs  Http.hs  Sqlite.hs  Types.hs
