cabal-version:      2.4
name:               hs-pos
version:            2.1.0.0


synopsis:           Point of Sale system backend

description:        hs-pos is a Point of Sale system backend in Haskell,
                    which includes a web server, a database, and a number
                    of helper functions to make it easier to build a POS.

bug-reports:        https://github.com/lillycat332/hs-pos
license:            BSD-3-Clause
license-file:       LICENSE
stability:          experimental
author:             Lilly Cham <lilly@lillycat.tech>
maintainer:         Lilly Cham <lilly@lillycat.tech>

copyright:          (c) 2022 Lilly Cham
category:           Database
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base ^>=4.16.2.0 
                    , scotty
                    , wai
                    , wai-extra
                    , wai-middleware-static
                    , aeson
                    , HDBC
                    , HDBC-sqlite3
                    , http-types
                    , text
                    , optparse-applicative
                    , convertible
                    , tuple
                    -- , password
    exposed-modules:  Database.HsPOS.Auth
                    , Database.HsPOS.Types
                    , Database.HsPOS.Sqlite
                    , Database.HsPOS.Http
                    , Database.HsPOS.Util

executable hs-pos
    main-is:          Main.hs
    build-depends:    base ^>=4.16.2.0 
                    , scotty
                    , wai
                    , wai-extra
                    , wai-middleware-static
                    , aeson
                    , http-types
                    , text
                    , optparse-applicative
                    , convertible
                    , hs-pos
    hs-source-dirs:   app
    default-language: Haskell2010
